2003-08-31  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b2

	* Language Update: Italian (it_IT) , Simplified Chinese (zh_CN)

2003-08-30  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b1

	* Fixed bug which cause progressbar not to close in IE
	  (fixed by vallimar)

2003-08-30  Beckett Madden-Woods <beckett@beckettmw.com> 1.4-RC2

	* v1.4 Release Candidate 2

2003-08-30  Jens Tkotz <jens@peino.de> 1.4-RC2-cvs-b14

	* Language Updates: German (de_DE), Italian (it_IT)

2003-08-29  Jens Tkotz <jens@peino.de> 1.4-RC2-cvs-b13

	* Language Updates: German (de_DE), Traditional Chinese (zh_TW)

2003-08-29  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4-RC2-cvs-b12

	* Replaced preg_grep() functions in favour of ereg() in
	  setup/functions.inc to support PHP pre-4.2.0.

	* Re-ordered include of util.php in setup. Previous change had
	  broken check_netpbm.php and check_imagemagick.php.
		
2003-08-28  Jens Tkotz <jens@peino.de> 1.4-RC2-cvs-b11

	* Added upgrade_users.php to po/filelist

	* Language update: German (de_DE), Italian (it_IT), Turkish (tr_TR)

	* Added missing locales (zh_CN), added missing .po (fi_FI)

	* Synced all languages against latest changes.

	* Bumped Config Version

2003-08-28  Jens Tkotz <jens@peino.de> 1.4-RC2-cvs-b10

	* Fixed bug which caused Gallery to use locale aliases which are
	  actually unavailable.

2003-08-28  Joan <gallery@joanhenge.plus.com> 1.4-RC2-cvs-b9
            Jens Tkotz <jens@peino.de>
	    	
	* Modified locale code so it behaves correctly on Mac and Windows
	  systems.

	* Cosmetic change to upgrade_users.php.
	
2003-08-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4-RC2-cvs-b8

	* Fixed incorrect image URL in search.php.

	* User upgrade code no longer prints progress of individual users with
	  usernames, which was a small security risk.

	* Rewrote all checks against button values, which previously failed
	  when values contained special non-HTML entities.
	  (Merged from 1.4.1-cvs-b31,-b32,-b33)
	