@@ -1,3 +1,11 @@
+2003-09-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4-RC3-cvs-b3
+
+	* Fixed bug in edit_apperance.php which caused "Close" button to render
+	  incorrectly.
+
+	* Fixed problem where progress window wouldn't close after photo
+	  uploads via save_photos.php.
+	
 2003-08-31  Jens Tkotz <jens@peino.de> 1.4-RC3-cvs-b2
 
 	* Language Update: Italian (it_IT) , Simplified Chinese (zh_CN)
